# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.98 2004/10/18 02:55:16 zhen Exp $

  17 Oct 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  firmware tarball fix for packages that need firmware such as ipw2100

  16 Oct 2004; <zhen@gentoo.org> livecd/files/x86-help.msg,
  livecd/runscript/x86-archscript.sh, livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh,
  modules/livecd_stage2_target.py:
  patches for gensplash support from Chris Gianelloni <wolf31o2@gentoo.org>

  14 Oct 2004; <zhen@gentoo.org> livecd/runscript/x86-archscript.sh:
  acpi=off changed to acpi=ht. enables HT automatically for intel users, but
  should not hurt non-HT users

  12 Oct 2004; John Davis <zhen@gentoo.org>
  targets/embedded/cramfs-runscript.sh, targets/embedded/embedded-chroot.sh,
  +targets/embedded/unmerge.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh, targets/netboot/netboot.sh,
  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh,
  livecd/runscript-support/kmerge.sh:
  bugfixes for #67195, #67197, #67122, and #46918

  12 Oct 2004; John Davis <zhen@gentoo.org> modules/netboot.py:
  small netboot fixups

  11 Oct 2004; <zhen@gentoo.org> modules/netboot.py,
  targets/netboot/netboot-busybox.sh, targets/netboot/netboot-image.sh,
  targets/netboot/netboot-kernel.sh, targets/netboot/netboot-packages.sh,
  targets/netboot/netboot.sh:
  sweeping updates and changes to the netboot code. the patches should fix the
  arch specific code as well as some pkgcache issues, etc. Much thanks to Mike
  Frysinger <vapier@gentoo.org> for writing and contributing the patches.

  06 Oct 2004; John Davis <zhen@gentoo.org> files/catalyst.1,
  livecd/runscript-support/kmerge.sh, targets/netboot/netboot-busybox.sh,