@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.98 2004/10/18 02:55:16 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.99 2004/10/19 03:39:36 zhen Exp $
+
+  18 Oct 2004; John Davis <zhen@gentoo.org>
+  livecd/runscript/x86-archscript.sh, livecd/runscript-support/kmerge.sh,
+  livecd/runscript-support/livecdfs-update.sh:
+  patch submitted by wolf31o2@gentoo.org to fix the rest of the gensplash woes
 
   17 Oct 2004; John Davis <zhen@gentoo.org>
   livecd/runscript-support/livecdfs-update.sh:
